plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.sofit'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
    }

    tasks.named('test') {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
    }

    jacoco {
        toolVersion = '0.8.12'  // 한 번만
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true   // SonarQube 쓰면 true, 안 쓰면 false
            html.required = true
            csv.required = false
        }
        // afterEvaluate {
        //     classDirectories.setFrom(files(classDirectories.files.collect {
        //         fileTree(dir: it, exclude: [
        //             '**/dto/**',
        //             '**/enums/**',
        //             '**/filter/**',
        //             '**/*Application.class',
        //             '**/config/**'
        //             '**/*Request.class',
        //             '**/*Response.class',
        //             '**/*ErrorCode.class',
        //             '**/*SuccessCode.class',
        //             '**/BaseException.class',
        //             '**/ApiResponse.class',
        //             '**/SecurityConfig.class',
        //             '**/JpaConfig.class',
        //             '**/JacksonConfig.class',
        //             '**/RedisConfig.class',
        //             '**/SwaggerConfig.class',
        //             '**/CorsConfig.class',
        //             '**/*ExceptionHandler.class',
        //             '**/CustomAccessDeniedHandler.class',
        //             '**/CustomAuthenticationEntryPoint.class',
        //         ])
        //     }))
        // }
    }

    // 커버리지 최소 기준 (필요 시 활성화)
    // jacocoTestCoverageVerification {
    //     violationRules {
    //         rule {
    //             limit {
    //                 minimum = 0.70
    //             }
    //         }
    //     }
    // }
}
